# news-app

./: .env.example  .gitignore  app.module.ts  main.ts  package-lock.json  package.json  tsconfig.json
config/: config.ts
instagram-scrapper/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  SUMMARY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
instagram-scrapper/scripts/: create_session.py
instagram-scrapper/src/: __init__.py  config.py  main.py  models.py
instagram-scrapper/src/queue/: __init__.py
instagram-scrapper/src/scraper/: __init__.py  instagram_scraper.py  mappers.py  media_upload_publisher.py  queue_worker.py  result_publisher.py
instagram-scrapper/tests/: __init__.py  conftest.py  test_config.py  test_models.py
plugins/: swagger.ts
report/: C4L3.vpd  example.md  report.md  ~$_шаблон_ч2_ПЗ_2025 СОКОЛОВ РГР.docx  ~$report.docx  КР_шаблон_ч1_ТЗ_2025 СОКОЛОВ РГР.docx
rss-scrapper/: .env.example  .flake8  Makefile  pyproject.toml  requirements.txt  setup.sh
rss-scrapper/src/: __init__.py  config.py  main.py  models.py
rss-scrapper/src/scraper/: __init__.py  mappers.py  media_upload_publisher.py  queue_worker.py  result_publisher.py  rss_scraper.py
rss-scrapper/tests/: __init__.py  conftest.py  test_config.py  test_models.py
server/: .dockerignore  .env.example  .env.test  docker-compose.yml  eslint.config.mjs  jest.e2e.config.ts  jest.unit.config.ts  package-lock.json  package.json
server/docs/: SOURCE_FETCHING_ORCHESTRATOR_FLOW.md  SOURCE_FETCHING_REVIEW.md  SOURCE_FETCHING_SYSTEM.md  cursor_optimizing_source_fetching_and_c.md
server/drizzle/: 0000_addUserSourceRelation.sql  0000_init-migration.sql  0000_initMigration.sql
server/drizzle/meta/: 0000_snapshot.json  _journal.json
server/src/: app.controller.ts  app.module.ts  drizzle.config.ts  global.d.ts  main.ts
server/src/admin/: admin.module.ts
server/src/articles/: articles.module.ts
server/src/auth/: auth.module.ts
server/src/complaints/: complaints.module.ts  index.ts
server/src/config/: config.service.ts  env.schema.ts  index.ts  load-env.ts
server/src/cookies/: cookies.service.ts  index.ts
server/src/database/: constants.ts  drizzle-definition.ts  drizzle-schemas.ts  drizzle.logger.ts  drizzle.module.ts  index.ts
server/src/errors/: app.error.ts  index.ts
server/src/logger/: logger.service.ts
server/src/mails/: mails.module.ts
server/src/media/: index.ts  media.module.ts
server/src/plugins/: bullboard.ts  index.ts  spelunker.ts  swagger.ts
server/src/posts/: posts.module.ts
server/src/raw-posts/: raw-posts.module.ts
server/src/sources/: sources.module.ts
server/src/user-activity/: user-activity.module.ts
server/src/user-sources/: index.ts  user-sources.module.ts
server/src/users/: users.module.ts
server/test/: docker-compose.test.yml  setup.ts
src/: app.controller.ts  app.module.ts  main.ts
src/commons/config/: config.module.ts
src/config/: config.service.ts
twitter-scrapper/: .env.example  .gitignore  Makefile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
twitter-scrapper/scripts/: add_account_with_cookies.py  setup_account.py
twitter-scrapper/src/: __init__.py  config.py  main.py  models.py
twitter-scrapper/src/scraper/: __init__.py  mappers.py  media_upload_publisher.py  queue_worker.py  result_publisher.py  twitter_scraper.py
twitter-scrapper/tests/: __init__.py  conftest.py  test_config.py  test_models.py
web/: .editorconfig  .env.example  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  COLOR_SYSTEM.md  CONFIGURATION.md  README.md  THEMING.md  eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts
web/app/: app.vue  auto-imports.d.ts
web/app/components/: ColorPaletteReference.vue  ExampleCard.vue  LoginForm.vue  RegisterForm.vue  ThemeSwitcher.vue  ThemeToggle.vue
web/docs/: LAYOUTS_AND_PAGES_DESIGN.md  QUICK_START.md  SETUP_SUMMARY.md  TOAST_STYLING.md
(+748 files in other folders)
